quick fix for short screen on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -211,6 +211,11 @@ label.message {
 /*mobile*/
 @media (max-width: 700px) {
 
+  .svg__bottom-container  {
+    margin-top: -11px;
+    z-index: -100;
+  }
+
   h1 {
     font-size: 1.7em;
   }
